feat: update ascendio docs

--- a/apps/docs/pages/index.mdx
+++ b/apps/docs/pages/index.mdx
@@ -1,3 +1,23 @@
-# Welcome to Ascendio Documentation
+# Introduction
 
-Under construction!
+Ascendio is a powerful CLI tool that streamlines the setup of a monorepo project. By automating the configuration of essential tools and libraries, it saves developers time and ensures consistency across projects.
+
+# What is exactly Ascendio?
+
+Ascendio is a pre-configured project structure that simplifies the setup of new projects based on your choices in the terminal. However, it includes some mandatory configurations to ensure clean, well-organized, and well-typed code, making developers' lives easier in the long run.
+
+# Mandatory Configurations
+
+- **ESLint**: Ensures code quality and consistency by enforcing coding standards.
+- **Prettier**: Automatically formats your code to maintain a consistent style.
+- **TypeScript**: Provides static typing to catch errors early and improve code reliability.
+- **Commitlint**: Enforces consistent commit messages to maintain a clean project history.
+- **pnpm**: A fast, disk space-efficient package manager.
+- **Tailwind CSS**: A utility-first CSS framework, integrated via shadcn-ui for styling.
+- **Lint-staged**: Runs linters on staged git files to ensure code quality before commits.
+- **Turborepo**: Efficiently manages monorepos, optimizing builds and tests.
+
+  These mandatory tools are integrated because we believe in maintaining high
+  code quality, which includes clean, organized, and well-typed code. By
+  including these configurations, Ascendio helps you create a robust foundation
+  for your projects, facilitating future development and maintenance.
